--- a/signin.html
+++ b/signin.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Possibility</title>
         <link rel="icon" href="file/image/logo/logo.png">
-        <link rel="stylesheet" href="file/problem.css">
+        <link rel="stylesheet" href="file/signin.css">
         <!-------- linkcdn --------->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -13,6 +13,23 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       </head>
 <body>
+    <div class="head">
+        <div class="container p-5">
+            <form action="functios.html">
+            <div class="data">
+                <h1>Sign In</h1>
+                <p>Lorem ipsum dolor sit</p>
+                <div class="putting">
+                <input type="text" name="username" id="username" placeholder="Username" required>
+                <input type="text" placeholder="Enter Email" name="email" required>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+            <br>
+        <button type="submit">Submit</button>
+    </div>     
+            </div>
+        </form>
+        </div>
+    </div>
     
 </body>
 </html>
