--- a/signin.html
+++ b/signin.html
@@ -14,7 +14,7 @@
       </head>
 <body>
     <div class="head">
-        <div class="container p-5">
+        <div class="container">
             <form action="functios.html">
             <div class="data">
                 <h1>Sign In</h1>
@@ -23,7 +23,6 @@
                 <input type="text" name="username" id="username" placeholder="Username" required>
                 <input type="text" placeholder="Enter Email" name="email" required>
             <input type="password" name="password" id="password" placeholder="Password" required>
-            <br>
         <button type="submit">Submit</button>
     </div>     
             </div>
