--- a/functios.html
+++ b/functios.html
@@ -34,7 +34,7 @@
       </div>
  
     </ul>
-    <button class="btnsignin" type="button">SignIn</button>
+    <button class="btnsignin" type="button"><a href="signin.html" style="text-decoration: none; color: aliceblue;">SignIn</a></button>
   </nav>
  </div>
  <!-- /* ------------nav------------------ */ -->
