--- a/problem.html
+++ b/problem.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <!-- /* ------------nav------------------ */ -->
+  <header>
  <div class="hero">
   <nav class="nav">
     <h2 class="logo">Possi<span>bility</span></h2>
@@ -34,6 +35,7 @@
     <button class="btnsignin" type="button"><a href="signin.html" style="text-decoration: none; color: aliceblue;">SignIn</a></button>
   </nav>
  </div>
+</header>
  <!-- /* ------------nav------------------ */ -->
  <!-- /* ------------header------------------ */ -->
 <div class="container title">
